--- a/.env.example
+++ b/.env.example
@@ -13,12 +13,12 @@ ADMIN_PASSWORD=admin123
 # 数据加密配置
 # ================================
 
-# API密钥加密密钥 (必须设置!)
+# API密钥加密密钥 
 # 32字节的Fernet加密密钥，用于加密存储API密钥
 # 示例生成方法: python -c "from cryptography.fernet import Fernet; print(Fernet.generate_key().decode())"
 # ENCRYPTION_KEY=your-32-byte-base64-encryption-key-here
 
-# 会话加密密钥 (必须设置!)
+# 会话加密密钥 
 # 32字节的随机字符串，用于加密会话cookie
 # 示例生成方法: python -c "import secrets; print(secrets.token_hex(32))"
 # SESSION_SECRET_KEY=your-64-character-hex-session-secret-key-here
