完善思考预算转换系统和模型API功能
  - 实现完整的三方API思考预算互转（OpenAI reasoning_effort ↔ Anthropic thinkingBudget ↔
  Gemini thinkingBudget）
  - 增强模型列表API支持多格式输出（OpenAI/Anthropic/Gemini格式）
  - 优化max_tokens和max_completion_tokens优先级处理逻辑
  - 完善环境变量配置和错误处理机制

--- a/.env.example
+++ b/.env.example
@@ -35,9 +35,47 @@ WEB_PORT=3000
 # ================================
 
 # Anthropic Claude 配置
-# Claude模型的最大token数限制 (默认: 4096)
+# Claude模型的最大token数限制 (默认: 32000)
 # 这是程序中实际使用的配置，用于限制Claude API请求的max_tokens参数
-ANTHROPIC_MAX_TOKENS=4096
+ANTHROPIC_MAX_TOKENS=32000
+
+# OpenAI Reasoning 模型配置
+# OpenAI思考模型的最大完成token数限制 (默认: 32000)
+# 用于为OpenAI reasoning模型设置max_completion_tokens的默认值
+# 当从Anthropic/Gemini转换到OpenAI格式且目标是思考模型时使用
+OPENAI_REASONING_MAX_TOKENS=32000
+
+# ================================
+# 思考预算映射配置
+# ================================
+
+# OpenAI reasoning_effort 到 Anthropic thinkingBudget 的映射配置
+# 用于将 OpenAI 的 low/medium/high 转换为 Anthropic 的具体 token 数值
+# 当 OpenAI 格式转 Anthropic 格式时使用
+OPENAI_LOW_TO_ANTHROPIC_TOKENS=2048
+OPENAI_MEDIUM_TO_ANTHROPIC_TOKENS=8192
+OPENAI_HIGH_TO_ANTHROPIC_TOKENS=16384
+
+# OpenAI reasoning_effort 到 Gemini thinkingBudget 的映射配置
+# 用于将 OpenAI 的 low/medium/high 转换为 Gemini 的具体 token 数值
+# 当 OpenAI 格式转 Gemini 格式时使用
+OPENAI_LOW_TO_GEMINI_TOKENS=2048
+OPENAI_MEDIUM_TO_GEMINI_TOKENS=8192
+OPENAI_HIGH_TO_GEMINI_TOKENS=16384
+
+# Anthropic thinkingBudget 到 OpenAI reasoning_effort 的阈值配置
+# 根据 Anthropic 的思考预算范围来确定对应的 OpenAI 思考强度等级
+# 当 Anthropic 格式转 OpenAI 格式时使用
+ANTHROPIC_TO_OPENAI_LOW_REASONING_THRESHOLD=2048
+ANTHROPIC_TO_OPENAI_HIGH_REASONING_THRESHOLD=16384
+# 逻辑：<= LOW_THRESHOLD 为 "low"，> HIGH_THRESHOLD 为 "high"，中间为 "medium"
+
+# Gemini thinkingBudget 到 OpenAI reasoning_effort 的阈值配置
+# 根据 Gemini 的思考预算范围来确定对应的 OpenAI 思考强度等级
+# 当 Gemini 格式转 OpenAI 格式时使用
+GEMINI_TO_OPENAI_LOW_REASONING_THRESHOLD=2048
+GEMINI_TO_OPENAI_HIGH_REASONING_THRESHOLD=16384
+# 逻辑：<= LOW_THRESHOLD 为 "low"，> HIGH_THRESHOLD 为 "high"，中间为 "medium"
 
 # ================================
 # 数据库配置
