--- a/.env.example
+++ b/.env.example
@@ -81,8 +81,20 @@ GEMINI_TO_OPENAI_HIGH_REASONING_THRESHOLD=16384
 # 数据库配置
 # ================================
 
-# SQLite数据库文件路径 (默认: data/channels.db)
+# 数据库类型 (sqlite 或 mysql，默认: sqlite)
+DATABASE_TYPE=sqlite
+
+# SQLite数据库文件路径 (当DATABASE_TYPE=sqlite时使用，默认: data/channels.db)
 DATABASE_PATH=data/channels.db
+
+# MySQL数据库配置 (当DATABASE_TYPE=mysql时使用)
+MYSQL_HOST=localhost
+MYSQL_PORT=3306
+MYSQL_USER=root
+MYSQL_PASSWORD=your_mysql_password
+MYSQL_DATABASE=api_conversion
+# 可选：使用Unix socket连接（优先于TCP连接）
+#MYSQL_SOCKET=/run/mysqld/mysqld.sock
 
 # ================================
 # 日志配置
@@ -115,5 +127,6 @@ LOG_MAX_DAYS=1
 # ADMIN_PASSWORD: 管理员登录密码，仅在数据库中没有设置密码时使用
 # ANTHROPIC_MAX_TOKENS: Claude API请求的最大token数限制，根据需要调整
 # WEB_PORT: Web服务器监听端口
-# DATABASE_PATH: 渠道数据存储的SQLite数据库文件路径
-# SESSION_TIMEOUT_HOURS: 登录会话的有效期（小时）
+# DATABASE_TYPE: 数据库类型，支持sqlite和mysql
+# DATABASE_PATH: SQLite数据库文件路径
+# MYSQL_*: MySQL数据库连接配置
